created cheese-toasty.html and vegan-lasagna.html. Added links to new pages from index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="/home/logicaljordan/the_odin_project/odin-recipes/recipes/curry.html">Vegetable Curry</a>
-</body>
+    <ul>
+        <li><a href="/home/logicaljordan/the_odin_project/odin-recipes/recipes/curry.html">Vegetable Curry</a></li>
+        <li><a href="/home/logicaljordan/the_odin_project/odin-recipes/recipes/vegan-lasagna.html">Vegan Lasagna</a></li>
+        <li><a href="/home/logicaljordan/the_odin_project/odin-recipes/recipes/cheese-toasty.html">Cheese Toasty</a></li>
+    </ul>
+
+    </body>
 </html>
