Updated links to images on all recipes

--- a/recipes/curry.html
+++ b/recipes/curry.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Vegetable Curry</h1>
-    <img src="/home/logicaljordan/the_odin_project/odin-recipes/images/vegetable-curry.jpeg" alt="">
+    <img src="/odin-recipes/images/vegetable-curry.jpeg" alt="">
     <h2>Description</h2>
     <p>This is one of my favorite dishes and can be knocked up in 30 mins.</p>
     <p>Full flavor, simple ingredients and spices that'll knock your socks off!</p>
@@ -28,6 +28,6 @@
         <li>Add the stock</li>
         <li>Serve with fresh coriander and naan bread</li>
     </ol>
-    <a href="/home/logicaljordan/the_odin_project/odin-recipes/index.html">Return to home</a>
+    <a href="/odin-recipes/index.html">Return to home</a>
 </body>
 </html>
