--- a/recipes/cheese-toasty.html
+++ b/recipes/cheese-toasty.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Cheese Toasty</h1>
-    <img src="/home/logicaljordan/the_odin_project/odin-recipes/images/cheese toasty.jpeg" alt="">
+    <img src="/odin-recipes/images/cheese toasty.jpeg" alt="">
     <h2>Description</h2>
     <p>5 minute winner!</p>
     <ul>Ingredients
@@ -23,6 +23,6 @@
         <li>Flip after a few minutes</li>
         <li>Serve with homemade chilli ketchup</li>
     </ol>
-    <a href="/home/logicaljordan/the_odin_project/odin-recipes/index.html">Return to home</a>
+    <a href="/odin-recipes/index.html">Return to home</a>
 </body>
 </html>
