--- a/recipes/vegan-lasagna.html
+++ b/recipes/vegan-lasagna.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Vegetable Curry</h1>
-    <img src="/home/logicaljordan/the_odin_project/odin-recipes/images/Vegan-Lasagna.jpg" alt="">
+    <img src="/odin-recipes/images/Vegan-Lasagna.jpg" alt="">
     <h2>Description</h2>
     <p>A vegan twist on a classic Italian staple</p>
     <p>Nothing will fill a hungry tummy better!</p>
@@ -31,6 +31,6 @@
         <li>Add the stock</li>
         <li>Serve with fresh coriander and naan bread</li>
     </ol>
-    <a href="/home/logicaljordan/the_odin_project/odin-recipes/index.html">Return to home</a>
+    <a href="/odin-recipes/index.html">Return to home</a>
 </body>
 </html>
