--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jordan's Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Jordan's Odin Recipes</h1>
+    <img src="/home/logicaljordan/the_odin_project/odin-recipes/images/chef.png">
     <ul>
         <li><a href="/odin-recipes/recipes/curry.html">Vegetable Curry</a></li>
         <li><a href="/odin-recipes/recipes/vegan-lasagna.html">Vegan Lasagna</a></li>
