general clean up to pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Jordan's Odin Recipes</h1>
-    <img src="/home/logicaljordan/the_odin_project/odin-recipes/images/chef.png">
+    <img src="/images/chef.png">
     <ul>
         <li><a href="/odin-recipes/recipes/curry.html">Vegetable Curry</a></li>
         <li><a href="/odin-recipes/recipes/vegan-lasagna.html">Vegan Lasagna</a></li>
