--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <h1>Jordan's Odin Recipes</h1>
     <img src="/images/chef.png">
     <ul>
-        <li><a href="/odin-recipes/recipes/curry.html">Vegetable Curry</a></li>
-        <li><a href="/odin-recipes/recipes/vegan-lasagna.html">Vegan Lasagna</a></li>
-        <li><a href="/odin-recipes/recipes/cheese-toasty.html">Cheese Toasty</a></li>
+        <li><a href="recipes/curry.html">Vegetable Curry</a></li>
+        <li><a href="recipes/vegan-lasagna.html">Vegan Lasagna</a></li>
+        <li><a href="recipes/cheese-toasty.html">Cheese Toasty</a></li>
     </ul>
 
     </body>
