--- a/recipes/cheese-toasty.html
+++ b/recipes/cheese-toasty.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cheese Toasty</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Cheese Toasty</h1>
-    <img src="/odin-recipes/images/cheese toasty.jpeg" alt="">
+    <img src="../images/cheese toasty.jpeg" alt="">
     <h2>Description</h2>
     <p>5 minute winner!</p>
     <ul>Ingredients
@@ -24,6 +24,6 @@
         <li>Flip after a few minutes</li>
         <li>Serve with homemade chilli ketchup</li>
     </ol>
-    <a href="/odin-recipes/index.html">Return to home</a>
+    <a href="../index.html">Return to home</a>
 </body>
 </html>
