--- a/recipes/curry.html
+++ b/recipes/curry.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vegetable Curry</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Vegetable Curry</h1>
-    <img src="/odin-recipes/images/vegetable-curry.jpeg" alt="">
+    <img src="../images/vegetable-curry.jpeg" alt="">
     <h2>Description</h2>
     <p>This is one of my favorite dishes and can be knocked up in 30 mins.</p>
     <p>Full flavor, simple ingredients and spices that'll knock your socks off!</p>
@@ -29,6 +29,6 @@
         <li>Add the stock</li>
         <li>Serve with fresh coriander and naan bread</li>
     </ol>
-    <a href="/odin-recipes/index.html">Return to home</a>
+    <a href="../index.html">Return to home</a>
 </body>
 </html>
