--- a/recipes/vegan-lasagna.html
+++ b/recipes/vegan-lasagna.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vegan Lasagna</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Vegetable Curry</h1>
-    <img src="/odin-recipes/images/Vegan-Lasagna.jpg" alt="">
+    <img src="../images/Vegan-Lasagna.jpg" alt="">
     <h2>Description</h2>
     <p>A vegan twist on a classic Italian staple</p>
     <p>Nothing will fill a hungry tummy better!</p>
@@ -32,6 +32,6 @@
         <li>Add the stock</li>
         <li>Serve with fresh coriander and naan bread</li>
     </ol>
-    <a href="/odin-recipes/index.html">Return to home</a>
+    <a href="../index.html">Return to home</a>
 </body>
 </html>
