--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Jordan's Odin Recipes</h1>
-    <img src="/images/chef.png">
+    <img src="images/chef.png">
     <ul>
         <li><a href="recipes/curry.html">Vegetable Curry</a></li>
         <li><a href="recipes/vegan-lasagna.html">Vegan Lasagna</a></li>
